2015-09-10  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* Added right AC_CHECK_HEADERS in configure.ac
	* Added server mode
	* Added TODO file

2015-09-06  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* Fixed Makefile.am

2015-09-06  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* Renamed project

2015-09-05  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* First public version

