@@ -1,0 +1,133 @@
+#Mozilla recommended configurations for web servers (taken on 12 Sept 2015)
+#Interesting links:
+#https://wiki.mozilla.org/Security/Server_Side_TLS
+#https://mozilla.github.io/server-side-tls/ssl-config-generator/
+#
+#used openssl 1.0.1e and "openssl ciphers -V 'CIPHER-SUITE-CONFIG' | cut -c 11-19" to get these lists
+#where CIPHER-SUITE-CONFIG is the proposed openssl Ciphersuite config
+
+<modern>
+0xC0,0x2F
+0xC0,0x2B
+0xC0,0x30
+0xC0,0x2C
+0x00,0x9E
+0x00,0xA2
+0x00,0xA3
+0x00,0x9F
+0xC0,0x27
+0xC0,0x23
+0xC0,0x13
+0xC0,0x09
+0xC0,0x28
+0xC0,0x24
+0xC0,0x14
+0xC0,0x0A
+0x00,0x67
+0x00,0x33
+0x00,0x40
+0x00,0x6B
+0x00,0x38
+0x00,0x39
+</modern>
+
+<intermediate>
+0xC0,0x2F
+0xC0,0x2B
+0xC0,0x30
+0xC0,0x2C
+0x00,0x9E
+0x00,0xA2
+0x00,0xA3
+0x00,0x9F
+0xC0,0x27
+0xC0,0x23
+0xC0,0x13
+0xC0,0x09
+0xC0,0x28
+0xC0,0x24
+0xC0,0x14
+0xC0,0x0A
+0x00,0x67
+0x00,0x33
+0x00,0x40
+0x00,0x6B
+0x00,0x38
+0x00,0x39
+0xC0,0x12
+0xC0,0x08
+0x00,0x9C
+0x00,0x9D
+0x00,0x3C
+0x00,0x3D
+0x00,0x2F
+0x00,0x35
+0xC0,0x22
+0xC0,0x21
+0xC0,0x20
+0x00,0x6A
+0xC0,0x1F
+0xC0,0x1E
+0xC0,0x1D
+0x00,0x32
+0x00,0x88
+0x00,0x87
+0x00,0x84
+0x00,0x45
+0x00,0x44
+0x00,0x41
+0x00,0x0A
+</intermediate>
+
+<old>
+0xC0,0x2F
+0xC0,0x2B
+0xC0,0x30
+0xC0,0x2C
+0x00,0x9E
+0x00,0xA2
+0x00,0xA3
+0x00,0x9F
+0xC0,0x27
+0xC0,0x23
+0xC0,0x13
+0xC0,0x09
+0xC0,0x28
+0xC0,0x24
+0xC0,0x14
+0xC0,0x0A
+0x00,0x67
+0x00,0x33
+0x00,0x40
+0x00,0x6B
+0x00,0x38
+0x00,0x39
+0xC0,0x12
+0xC0,0x08
+0x00,0x9C
+0x00,0x9D
+0x00,0x3C
+0x00,0x3D
+0x00,0x2F
+0x00,0x35
+0xC0,0x22
+0xC0,0x21
+0xC0,0x20
+0x00,0x6A
+0xC0,0x1F
+0xC0,0x1E
+0xC0,0x1D
+0x00,0x32
+0x00,0x0A
+0x00,0x88
+0x00,0x87
+0x00,0x84
+0xC0,0x1C
+0xC0,0x1B
+0xC0,0x1A
+0x00,0x45
+0x00,0x44
+0x00,0x41
+</old>
+
+#else means unknown or dangerous....
