@@ -1,3 +1,9 @@
+2015-09-12  Marco Bellaccini <marco.bellaccini[at!]gmail.com>
+
+	* Added Cipher Suite Strength Evaluation with color feedback	
+	* Fixed TIME_WAIT issue
+	* Performed some code cleanup
+
 2015-09-10  Marco Bellaccini <marco.bellaccini[at!]gmail.com>
 
 	* Added right AC_CHECK_HEADERS in configure.ac
